Fix align text

--- a/src/scss/half-life-2/_common.scss
+++ b/src/scss/half-life-2/_common.scss
@@ -54,13 +54,13 @@
 	    white-space: nowrap;
 	    width: 1px;
 	}
-	&--h-l2-left{
+	&--left{
 		text-align: left;
 	}
-	&--h-l2-center{
+	&--center{
 		text-align: center;
 	}
-	&--h-l2-right{
+	&--right{
 		text-align: right;
 	}
 }
